<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoalsActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/button1Text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/button2Text"
        app:layout_constraintLeft_toRightOf="@id/button1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/button3Text"
        app:layout_constraintLeft_toRightOf="@id/button2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="108dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/button4Text"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/menuSpinner"
        android:layout_width="105dp"
        android:layout_height="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/button4"/>

    <EditText
        android:id="@+id/moveGoalNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moveGoalTextView"/>

    <Spinner
        android:id="@+id/breakSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/breakGoalTextView"/>

    <Spinner
        android:id="@+id/moodGoalSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moodGoalTextView"/>

    <TextView
        android:id="@+id/moveGoalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moveGoalText"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/breakGoalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breakGoalText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moveGoalNumber"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/moodGoalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moodGoalText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/breakSpinner"
        android:layout_marginTop="25dp" />

    <Button
        android:id="@+id/saveGoalsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save Goals"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/moodGoalSpinner"
        android:layout_marginTop="25dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>